--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: DentistSmile | Dental Jekyll Theme
+title: HimDental | Chauhan Digital Seva
 description: "A responsive Jekyll theme for dental clinics."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the name of your domain
@@ -8,7 +8,7 @@ logo_url: svg/min/logo.svg
 # Hero
 hero: 
     hero_img: hero.jpg
-    hero_title: DentistSmile
+    hero_title: Chauhan Digital Seva
     hero_description: A responsive Jekyll theme for dental clinics.
 
 # Contact form
@@ -16,10 +16,10 @@ api_token: # Enter API token here
 
 # Contact info
 contact:
-    phone: 932 50 540
+    phone: 7838003978
     emergency: 931 53 234
-    email: contact@yoursite.com
-    address: Von schroeders 273, <br> Viña del mar - Chile
+    email: nishantbhicka@gmail.com
+    address: , <br> Chauhan Digital Seva, Main Market Rohru, Shimal, Himachal Pradesh
 
 # Opening hours
 monday_friday: 9:00 – 18:00
@@ -33,7 +33,7 @@ testimonials:
 # Map
 map:
     zoom: 17
-    address: Von schroeders 273, Viña del mar, Chile
+    address: , Viña del mar, Chile
     address_details: svg/min/logo.svg
 
 # Social settings
@@ -41,11 +41,11 @@ facebook: http://facebook.com
 twitter: http://twitter.com
 instagram: http://instagram.com
 youtube: http://youtube.com
-skype: skype:obaez_design?userinfo
+skype: 
 feed: yes
 
 # Footer
-copyright: © 2015 DentistSmile - All rights reserved
+copyright: © 2022 Chauhan Digital Seva - All rights reserved
 
 # Build settings
 markdown: kramdown
